# dining-philosophers

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
dining_philosophers/: __init__.py  main.py  version.py
dining_philosophers/src/: dining_philosophers.py  dining_simulation.py  feast.py  philosopher.py  stick.py
